LLVMInterface/LLVMInterface/ManagedContext.h

struct ManagedContext
{
    llvm::Module* M;
    llvm::LLVMContext* context;
    llvm::Type* stringTy = 0;
    llvm::IRBuilder<>* builder = 0;
    AllocationRemovingPass* arp = 0;

    ManagedContext(const char* name, const char* filename );
    ~ManagedContext();

};
EXTERN_API(void) storeRelease(ManagedContext* ctx, llvm::Value* basePtr, llvm::Value* nwVal, llvm::IRBuilder<>* irb);
EXTERN_API(llvm::Value)* compareExchangeAcqRel(ManagedContext* ctx, llvm::Value* basePtr, llvm::Value* cmp, llvm::Value* nwVal, llvm::IRBuilder<>* irb);
EXTERN_API(llvm::Value)* exchangeAcqRel(ManagedContext* ctx, llvm::Value* basePtr, llvm::Value* nwVal, llvm::IRBuilder<>* irb);
EXTERN_API(llvm::Value)* getArgument(ManagedContext* ctx, llvm::Function* fn, uint32_t index);
EXTERN_API(llvm::Value)* negate(ManagedContext* ctx, llvm::Value* subEx, char op, bool isUnsigned, llvm::IRBuilder<>* irb);
EXTERN_API(llvm::Value)* arithmeticBinOp(ManagedContext* ctx, llvm::Value* lhs, llvm::Value* rhs, char op, bool isUnsigned, llvm::IRBuilder<>* irb);
EXTERN_API(llvm::Value)* arithmeticUpdateAcqRel(ManagedContext* ctx, llvm::Value* basePtr, llvm::Value* rhs, char op, bool isUnsigned, llvm::IRBuilder<>* irb);
EXTERN_API(llvm::Value)* bitwiseBinop(ManagedContext* ctx, llvm::Value* lhs, llvm::Value* rhs, char op, bool isUnsigned, llvm::IRBuilder<>* irb);
EXTERN_API(llvm::Value)* bitwiseUpdateAcqRel(ManagedContext* ctx, llvm::Value* basePtr, llvm::Value* rhs, char op, bool isUnsigned, llvm::IRBuilder<>* irb);
EXTERN_API(llvm::Value)* shiftOp(ManagedContext* ctx, llvm::Value* lhs, llvm::Value* rhs, bool leftShift, bool isUnsigned, llvm::IRBuilder<>* irb);
EXTERN_API(llvm::Value)* compareOp(ManagedContext* ctx, llvm::Value* lhs, llvm::Value* rhs, char op, bool orEqual, bool isUnsigned, llvm::IRBuilder<>* irb);
EXTERN_API(llvm::Value)* ptrDiff(ManagedContext* ctx, llvm::Value* lhs, llvm::Value* rhs, llvm::IRBuilder<>* irb);
EXTERN_API(bool) tryCast(ManagedContext* ctx, llvm::Value* val, llvm::Type* dest, llvm::Value*& ret, bool isUnsigned, llvm::IRBuilder<>* irb);
EXTERN_API(llvm::Value)* forceCast(ManagedContext* ctx, llvm::Value* val, llvm::Type* dest, bool isUnsigned, llvm::IRBuilder<>* irb);
EXTERN_API(void) returnVoid(ManagedContext* ctx, llvm::IRBuilder<>* irb);
EXTERN_API(void) returnValue(ManagedContext* ctx, llvm::Value* retVal, llvm::IRBuilder<>* irb);
EXTERN_API(void) integerSwitch(ManagedContext* ctx, llvm::Value* compareInt, llvm::BasicBlock* defaultTarget, llvm::BasicBlock** conditionalTargets, uint32_t numCondTargets, llvm::Value** conditions, uint32_t numConditions, llvm::IRBuilder<>* irb);
EXTERN_API(llvm::Value)* marshalMainMethodCMDLineArgs(ManagedContext* ctx, llvm::Function* managedMain, llvm::Function* unmanagedMain, llvm::IRBuilder<>* irb);
EXTERN_API(llvm::Constant)* getInt128(ManagedContext* ctx, uint64_t hi, uint64_t lo);
EXTERN_API(llvm::Constant)* getInt64(ManagedContext* ctx, uint64_t val);
EXTERN_API(llvm::Constant)* getIntSZ(ManagedContext* ctx, uint64_t val);
EXTERN_API(llvm::Constant)* getInt32(ManagedContext* ctx, uint32_t val);
EXTERN_API(llvm::Constant)* getInt16(ManagedContext* ctx, uint16_t val);
EXTERN_API(llvm::Constant)* getInt8(ManagedContext* ctx, uint8_t val);
EXTERN_API(llvm::Constant)* getString(ManagedContext* ctx, const char* strlit, llvm::IRBuilder<>* irb);
EXTERN_API(llvm::Constant)* True(ManagedContext* ctx);