LLVMCodeGenerator/LLVMCodeGenerator/ManagedContext.cs

        public static void StoreRelease (IntPtr ctx, IntPtr basePtr, IntPtr nwVal, IntPtr irb) {
            storeRelease(ctx, basePtr, nwVal, irb);
        }
        public void StoreRelease (IntPtr basePtr, IntPtr nwVal, IntPtr irb) {
            storeRelease(Instance, basePtr, nwVal, irb);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr compareExchangeAcqRel (IntPtr ctx, IntPtr basePtr, IntPtr cmp, IntPtr nwVal, IntPtr irb);
        public static IntPtr CompareExchangeAcqRel (IntPtr ctx, IntPtr basePtr, IntPtr cmp, IntPtr nwVal, IntPtr irb) {
            return compareExchangeAcqRel(ctx, basePtr, cmp, nwVal, irb);
        }
        public IntPtr CompareExchangeAcqRel (IntPtr basePtr, IntPtr cmp, IntPtr nwVal, IntPtr irb) {
            return compareExchangeAcqRel(Instance, basePtr, cmp, nwVal, irb);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr exchangeAcqRel (IntPtr ctx, IntPtr basePtr, IntPtr nwVal, IntPtr irb);
        public static IntPtr ExchangeAcqRel (IntPtr ctx, IntPtr basePtr, IntPtr nwVal, IntPtr irb) {
            return exchangeAcqRel(ctx, basePtr, nwVal, irb);
        }
        public IntPtr ExchangeAcqRel (IntPtr basePtr, IntPtr nwVal, IntPtr irb) {
            return exchangeAcqRel(Instance, basePtr, nwVal, irb);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr getArgument (IntPtr ctx, IntPtr fn, uint index);
        public static IntPtr GetArgument (IntPtr ctx, IntPtr fn, uint index) {
            return getArgument(ctx, fn, index);
        }
        public IntPtr GetArgument (IntPtr fn, uint index) {
            return getArgument(Instance, fn, index);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr negate (IntPtr ctx, IntPtr subEx, sbyte op, bool isUnsigned, IntPtr irb);
        public static IntPtr Negate (IntPtr ctx, IntPtr subEx, sbyte op, bool isUnsigned, IntPtr irb) {
            return negate(ctx, subEx, op, isUnsigned, irb);
        }
        public IntPtr Negate (IntPtr subEx, sbyte op, bool isUnsigned, IntPtr irb) {
            return negate(Instance, subEx, op, isUnsigned, irb);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr arithmeticBinOp (IntPtr ctx, IntPtr lhs, IntPtr rhs, sbyte op, bool isUnsigned, IntPtr irb);
        public static IntPtr ArithmeticBinOp (IntPtr ctx, IntPtr lhs, IntPtr rhs, sbyte op, bool isUnsigned, IntPtr irb) {
            return arithmeticBinOp(ctx, lhs, rhs, op, isUnsigned, irb);
        }
        public IntPtr ArithmeticBinOp (IntPtr lhs, IntPtr rhs, sbyte op, bool isUnsigned, IntPtr irb) {
            return arithmeticBinOp(Instance, lhs, rhs, op, isUnsigned, irb);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr arithmeticUpdateAcqRel (IntPtr ctx, IntPtr basePtr, IntPtr rhs, sbyte op, bool isUnsigned, IntPtr irb);
        public static IntPtr ArithmeticUpdateAcqRel (IntPtr ctx, IntPtr basePtr, IntPtr rhs, sbyte op, bool isUnsigned, IntPtr irb) {
            return arithmeticUpdateAcqRel(ctx, basePtr, rhs, op, isUnsigned, irb);
        }
        public IntPtr ArithmeticUpdateAcqRel (IntPtr basePtr, IntPtr rhs, sbyte op, bool isUnsigned, IntPtr irb) {
            return arithmeticUpdateAcqRel(Instance, basePtr, rhs, op, isUnsigned, irb);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr bitwiseBinop (IntPtr ctx, IntPtr lhs, IntPtr rhs, sbyte op, bool isUnsigned, IntPtr irb);
        public static IntPtr BitwiseBinop (IntPtr ctx, IntPtr lhs, IntPtr rhs, sbyte op, bool isUnsigned, IntPtr irb) {
            return bitwiseBinop(ctx, lhs, rhs, op, isUnsigned, irb);
        }
        public IntPtr BitwiseBinop (IntPtr lhs, IntPtr rhs, sbyte op, bool isUnsigned, IntPtr irb) {
            return bitwiseBinop(Instance, lhs, rhs, op, isUnsigned, irb);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr bitwiseUpdateAcqRel (IntPtr ctx, IntPtr basePtr, IntPtr rhs, sbyte op, bool isUnsigned, IntPtr irb);
        public static IntPtr BitwiseUpdateAcqRel (IntPtr ctx, IntPtr basePtr, IntPtr rhs, sbyte op, bool isUnsigned, IntPtr irb) {
            return bitwiseUpdateAcqRel(ctx, basePtr, rhs, op, isUnsigned, irb);
        }
        public IntPtr BitwiseUpdateAcqRel (IntPtr basePtr, IntPtr rhs, sbyte op, bool isUnsigned, IntPtr irb) {
            return bitwiseUpdateAcqRel(Instance, basePtr, rhs, op, isUnsigned, irb);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr shiftOp (IntPtr ctx, IntPtr lhs, IntPtr rhs, bool leftShift, bool isUnsigned, IntPtr irb);
        public static IntPtr ShiftOp (IntPtr ctx, IntPtr lhs, IntPtr rhs, bool leftShift, bool isUnsigned, IntPtr irb) {
            return shiftOp(ctx, lhs, rhs, leftShift, isUnsigned, irb);
        }
        public IntPtr ShiftOp (IntPtr lhs, IntPtr rhs, bool leftShift, bool isUnsigned, IntPtr irb) {
            return shiftOp(Instance, lhs, rhs, leftShift, isUnsigned, irb);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr compareOp (IntPtr ctx, IntPtr lhs, IntPtr rhs, sbyte op, bool orEqual, bool isUnsigned, IntPtr irb);
        public static IntPtr CompareOp (IntPtr ctx, IntPtr lhs, IntPtr rhs, sbyte op, bool orEqual, bool isUnsigned, IntPtr irb) {
            return compareOp(ctx, lhs, rhs, op, orEqual, isUnsigned, irb);
        }
        public IntPtr CompareOp (IntPtr lhs, IntPtr rhs, sbyte op, bool orEqual, bool isUnsigned, IntPtr irb) {
            return compareOp(Instance, lhs, rhs, op, orEqual, isUnsigned, irb);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr ptrDiff (IntPtr ctx, IntPtr lhs, IntPtr rhs, IntPtr irb);
        public static IntPtr PtrDiff (IntPtr ctx, IntPtr lhs, IntPtr rhs, IntPtr irb) {
            return ptrDiff(ctx, lhs, rhs, irb);
        }
        public IntPtr PtrDiff (IntPtr lhs, IntPtr rhs, IntPtr irb) {
            return ptrDiff(Instance, lhs, rhs, irb);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern bool tryCast (IntPtr ctx, IntPtr val, IntPtr dest, ref IntPtr ret, bool isUnsigned, IntPtr irb);
        public static bool TryCast (IntPtr ctx, IntPtr val, IntPtr dest, ref IntPtr ret, bool isUnsigned, IntPtr irb) {
            return tryCast(ctx, val, dest, ref ret, isUnsigned, irb);
        }
        public bool TryCast (IntPtr val, IntPtr dest, ref IntPtr ret, bool isUnsigned, IntPtr irb) {
            return tryCast(Instance, val, dest, ref ret, isUnsigned, irb);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr forceCast (IntPtr ctx, IntPtr val, IntPtr dest, bool isUnsigned, IntPtr irb);
        public static IntPtr ForceCast (IntPtr ctx, IntPtr val, IntPtr dest, bool isUnsigned, IntPtr irb) {
            return forceCast(ctx, val, dest, isUnsigned, irb);
        }
        public IntPtr ForceCast (IntPtr val, IntPtr dest, bool isUnsigned, IntPtr irb) {
            return forceCast(Instance, val, dest, isUnsigned, irb);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern void returnVoid (IntPtr ctx, IntPtr irb);
        public static void ReturnVoid (IntPtr ctx, IntPtr irb) {
            returnVoid(ctx, irb);
        }
        public void ReturnVoid (IntPtr irb) {
            returnVoid(Instance, irb);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern void returnValue (IntPtr ctx, IntPtr retVal, IntPtr irb);
        public static void ReturnValue (IntPtr ctx, IntPtr retVal, IntPtr irb) {
            returnValue(ctx, retVal, irb);
        }
        public void ReturnValue (IntPtr retVal, IntPtr irb) {
            returnValue(Instance, retVal, irb);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern void integerSwitch (IntPtr ctx, IntPtr compareInt, IntPtr defaultTarget, IntPtr[] conditionalTargets, uint numCondTargets, IntPtr[] conditions, uint numConditions, IntPtr irb);
        public static void IntegerSwitch (IntPtr ctx, IntPtr compareInt, IntPtr defaultTarget, IntPtr[] conditionalTargets, IntPtr[] conditions, IntPtr irb) {
            integerSwitch(ctx, compareInt, defaultTarget, conditionalTargets, (uint)conditionalTargets.Length, conditions, (uint)conditions.Length, irb);
        }
        public void IntegerSwitch (IntPtr compareInt, IntPtr defaultTarget, IntPtr[] conditionalTargets, IntPtr[] conditions, IntPtr irb) {
            integerSwitch(Instance, compareInt, defaultTarget, conditionalTargets, (uint)conditionalTargets.Length, conditions, (uint)conditions.Length, irb);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr marshalMainMethodCMDLineArgs (IntPtr ctx, IntPtr managedMain, IntPtr unmanagedMain, IntPtr irb);
        public static IntPtr MarshalMainMethodCMDLineArgs (IntPtr ctx, IntPtr managedMain, IntPtr unmanagedMain, IntPtr irb) {
            return marshalMainMethodCMDLineArgs(ctx, managedMain, unmanagedMain, irb);
        }
        public IntPtr MarshalMainMethodCMDLineArgs (IntPtr managedMain, IntPtr unmanagedMain, IntPtr irb) {
            return marshalMainMethodCMDLineArgs(Instance, managedMain, unmanagedMain, irb);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr getInt128 (IntPtr ctx, ulong hi, ulong lo);
        public static IntPtr GetInt128 (IntPtr ctx, ulong hi, ulong lo) {
            return getInt128(ctx, hi, lo);
        }
        public IntPtr GetInt128 (ulong hi, ulong lo) {
            return getInt128(Instance, hi, lo);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr getInt64 (IntPtr ctx, ulong val);
        public static IntPtr GetInt64 (IntPtr ctx, ulong val) {
            return getInt64(ctx, val);
        }
        public IntPtr GetInt64 (ulong val) {
            return getInt64(Instance, val);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr getIntSZ (IntPtr ctx, ulong val);
        public static IntPtr GetIntSZ (IntPtr ctx, ulong val) {
            return getIntSZ(ctx, val);
        }
        public IntPtr GetIntSZ (ulong val) {
            return getIntSZ(Instance, val);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr getInt32 (IntPtr ctx, uint val);
        public static IntPtr GetInt32 (IntPtr ctx, uint val) {
            return getInt32(ctx, val);
        }
        public IntPtr GetInt32 (uint val) {
            return getInt32(Instance, val);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr getInt16 (IntPtr ctx, ushort val);
        public static IntPtr GetInt16 (IntPtr ctx, ushort val) {
            return getInt16(ctx, val);
        }
        public IntPtr GetInt16 (ushort val) {
            return getInt16(Instance, val);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr getInt8 (IntPtr ctx, byte val);
        public static IntPtr GetInt8 (IntPtr ctx, byte val) {
            return getInt8(ctx, val);
        }
        public IntPtr GetInt8 (byte val) {
            return getInt8(Instance, val);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr getString (IntPtr ctx, [MarshalAs(UnmanagedType.LPUTF8Str)]string strlit, IntPtr irb);
        public static IntPtr GetString (IntPtr ctx, string strlit, IntPtr irb) {
            return getString(ctx, strlit, irb);
        }
        public IntPtr GetString (string strlit, IntPtr irb) {
            return getString(Instance, strlit, irb);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr True (IntPtr ctx);
        public IntPtr True () {
            return True(Instance);
        }
